--- a/Google/Extent-Report/ExtentReport.html
+++ b/Google/Extent-Report/ExtentReport.html
@@ -54,7 +54,7 @@
 					<i class='mdi-hardware-desktop-windows'></i>
 				</li>
 				<li>
-					<span class='suite-started-time'>2020-02-21 00:33:15</span>
+					<span class='suite-started-time'>2020-02-21 03:43:56</span>
 				</li>
 				<li>
 					<span>v2.41.1</span>
@@ -84,25 +84,25 @@
 					<div class='col l2 m4 s12'>
 						<div class='card suite-total-time-current'> 
 							<span class='panel-name'>Total Time Taken (Current Run)</span> 
-							<span class='suite-total-time-current-value panel-lead'>0h 0m 31s+565ms</span> 
+							<span class='suite-total-time-current-value panel-lead'>0h 0m 48s+298ms</span> 
 						</div> 
 					</div>
 					<div class='col l2 m4 s12'>
 						<div class='card suite-total-time-overall'> 
 							<span class='panel-name'>Total Time Taken (Overall)</span> 
-							<span class='suite-total-time-overall-value panel-lead'>0h 0m 31s+565ms</span> 
+							<span class='suite-total-time-overall-value panel-lead'>0h 0m 48s+298ms</span> 
 						</div> 
 					</div>
 					<div class='col l2 m4 s6 suite-start-time'>
 						<div class='card accent green-accent'> 
 							<span class='panel-name'>Start</span> 
-							<span class='panel-lead suite-started-time'>2020-02-21 00:32:43</span> 
+							<span class='panel-lead suite-started-time'>2020-02-21 03:43:08</span> 
 						</div> 
 					</div>
 					<div class='col l2 m4 s6 suite-end-time'>
 						<div class='card accent pink-accent'> 
 							<span class='panel-name'>End</span> 
-							<span class='panel-lead suite-ended-time'>2020-02-21 00:33:15</span> 
+							<span class='panel-lead suite-ended-time'>2020-02-21 03:43:56</span> 
 						</div> 
 					</div>
 				</div>
@@ -205,7 +205,7 @@
 									<tbody>
 											<tr>
 												<td>
-													HomePage
+													TestHomePage
 												</td>
 											</tr>
 									</tbody>
@@ -241,7 +241,7 @@
 										<i class='mdi-maps-local-offer'></i>
 									</a>
 									<ul id='category-toggle' class='dropdown-content'>
-											<li class='HomePage'><a href='#!'>HomePage</a></li>
+											<li class='TestHomePage'><a href='#!'>TestHomePage</a></li>
 										<li class='divider'></li>
 										<li class='clear'><a href='#!'>Clear Filters</a></li>
 									</ul>
@@ -273,22 +273,22 @@
 						<div class='card-panel no-padding-h no-padding-v no-margin-v'>
 							<div class='wrapper'>
 								<ul id='test-collection' class='test-collection'>
-										<li class='collection-item test displayed active pass ' extentid='6b6e2da1-02d1-4a73-8b4a-a7bd05aef10d'>
+										<li class='collection-item test displayed active pass ' extentid='4b278d5a-4094-45f1-bb06-d4a0901da5f5'>
 											<div class='test-head'>
-												<span class='test-name'>search </span>
+												<span class='test-name'>testSearchFromDB </span>
 												<span class='test-status label right outline capitalize pass'>pass</span>
-												<span class='category-assigned hide  homepage'></span>
+												<span class='category-assigned hide  testhomepage'></span>
 											</div>
 											<div class='test-body'>
 												<div class='test-info'>
-													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2020-02-21 00:32:53</span>
-													<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'>2020-02-21 00:33:13</span>
-													<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'>0h 0m 20s+38ms</span>
+													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2020-02-21 03:43:14</span>
+													<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'>2020-02-21 03:43:34</span>
+													<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'>0h 0m 19s+902ms</span>
 												</div>
 												<div class='test-desc'></div>
 												<div class='test-attributes'>
 														<div class='categories'>
-																<span class='category text-white'>HomePage</span>
+																<span class='category text-white'>TestHomePage</span>
 														</div>
 												</div>
 												<div class='test-steps'>
@@ -303,7 +303,47 @@
 														<tbody>
 																<tr>
 																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-																	<td class='timestamp'>00:33:13</td>
+																	<td class='timestamp'>03:43:34</td>
+																	<td class='step-details'>Test Passed</td>
+																</tr>
+														</tbody>
+													</table>
+													<ul class='collapsible node-list' data-collapsible='accordion'>
+													</ul>
+												</div>
+											</div>
+										</li>
+										<li class='collection-item test displayed active pass ' extentid='0eb4aa7b-8388-42e5-9140-c187da79ca6a'>
+											<div class='test-head'>
+												<span class='test-name'>testSearchFromExcel </span>
+												<span class='test-status label right outline capitalize pass'>pass</span>
+												<span class='category-assigned hide  testhomepage'></span>
+											</div>
+											<div class='test-body'>
+												<div class='test-info'>
+													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2020-02-21 03:43:40</span>
+													<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'>2020-02-21 03:43:55</span>
+													<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'>0h 0m 14s+882ms</span>
+												</div>
+												<div class='test-desc'></div>
+												<div class='test-attributes'>
+														<div class='categories'>
+																<span class='category text-white'>TestHomePage</span>
+														</div>
+												</div>
+												<div class='test-steps'>
+													<table class='bordered table-results'>
+														<thead>
+															<tr>
+																<th>Status</th>
+																<th>Timestamp</th>
+																<th>Details</th>
+															</tr>
+														</thead>
+														<tbody>
+																<tr>
+																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
+																	<td class='timestamp'>03:43:55</td>
 																	<td class='step-details'>Test Passed</td>
 																</tr>
 														</tbody>
@@ -362,15 +402,15 @@
 									<ul id='cat-collection' class='cat-collection'>
 											<li class='category-item displayed'>
 												<div class='cat-head'>
-													<span class='category-name'>HomePage</span>
+													<span class='category-name'>TestHomePage</span>
 												</div>
 												<div class='category-status-counts'>
-														<span class='pass label dot'>Pass: 1</span>
+														<span class='pass label dot'>Pass: 2</span>
 												</div>
 												<div class='cat-body'>
 													<div class='category-status-counts'>
 														<div class='button-group'>
-															<a href='#!' class='pass label filter'>Pass <span class='icon'>1</span></a>
+															<a href='#!' class='pass label filter'>Pass <span class='icon'>2</span></a>
 															<a href='#!' class='fail label filter'>Fail <span class='icon'>0</span></a>
 															<a href='#!' class='other label filter'>Others <span class='icon'>0</span></a>
 														</div>
@@ -386,8 +426,13 @@
 															</thead>
 															<tbody>
 																	<tr class='pass'>
-																		<td>2020-02-21 00:32:53</td>
-																		<td><span class='category-link linked' extentid='6b6e2da1-02d1-4a73-8b4a-a7bd05aef10d'>search</span></td>
+																		<td>2020-02-21 03:43:14</td>
+																		<td><span class='category-link linked' extentid='4b278d5a-4094-45f1-bb06-d4a0901da5f5'>testSearchFromDB</span></td>
+																		<td><div class='status label capitalize pass'>pass</div></td>
+																	</tr>
+																	<tr class='pass'>
+																		<td>2020-02-21 03:43:40</td>
+																		<td><span class='category-link linked' extentid='0eb4aa7b-8388-42e5-9140-c187da79ca6a'>testSearchFromExcel</span></td>
 																		<td><div class='status label capitalize pass'>pass</div></td>
 																	</tr>
 															<tbody>
